[package]
name = "winit-wgpu-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
wgpu = "0.17"
egui-winit = "0.23"
egui-wgpu = "0.23"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
egui = { version = "0.23", features = ["bytemuck"] }
