[package]
name = "winit-wgpu-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29"
wgpu = "0.19"
egui-winit = "0.27"
egui-wgpu = "0.27"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
egui = { version = "0.27", features = ["bytemuck"] }
